src/objects/ABB_Location__c.object
<CustomObject>
    <description>R4V1-This object refers to ABB Location.</description>
    <fields>
        <fullName>Activity__c</fullName>
        <description>R4V1-This field refers to</description>
        <label>Activity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>R4V1-This field refers to Address.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BALId__c</fullName>
        <description>R4V1-This field refers to balid.</description>
        <externalId>true</externalId>
        <label>BALId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R4V1-This field refers to BU.</description>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>R4V1-This field refers to city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>R4V1-This field refers to company.</description>
        <label>Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R4V1-This Picklist refers to Country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo, Democratic Republic of the</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cote d&apos;Ivoire</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R4V1-This picklist refers to DIV.</description>
        <label>DIV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM-Discrete Automation and Motion</fullName>
                </value>
                <value>
                    <fullName>EP-Electrification Products</fullName>
                </value>
                <value>
                    <fullName>PG-Power Grids</fullName>
                </value>
                <value>
                    <fullName>ZC-Corporate &amp; Other</fullName>
                </value>
                <value>
                    <fullName>PA-Process Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Load_Year__c</fullName>
        <description>This field to be used for the data load activity as part of the ReOrg Business requirements : R4.2</description>
        <label>Data Load Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4V1-This field refers to Deleted.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descriptive_Name__c</fullName>
        <description>R4V1-This field refers to Descriptive Name.</description>
        <label>Descriptive Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <description>R4V1-This field refers to LocationId.</description>
        <label>LocationId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>R4V1-This field refers to Location Type.</description>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>3rd Party Agent</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Non-main</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R4 Migration ID</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Non_ABB__c</fullName>
        <description>R4 Non ABB</description>
        <label>Non ABB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Number__c</fullName>
        <description>Created as part of R5-2343. Stores number format of Product group populated via trigger.</description>
        <label>Product Group Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_Temp__c</fullName>
        <formula>VALUE(LEFT(Product_Group__c,4))</formula>
        <label>Product Group Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R4 Product Group</description>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>R4V1-This field refers to Region.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia, Middle East &amp; Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Successor__c</fullName>
        <description>R4V1-This field refers to Successor.</description>
        <label>Successor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ABB Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Activity__c</columns>
        <columns>BU__c</columns>
        <columns>Product_Group__c</columns>
        <columns>BALId__c</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ABB Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABB Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>